--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <span class="orange-text">public</span> MeObject <span class="yellow-text">getAboutMe</span>(){
         MeObject obj = <span class="orange-text">new</span> MeObject()<span class="orange-text">;</span>
         obj.setName(<span class="green-text">"Wesley"</span>)<span class="orange-text">;</span>
-        obj.setLink(<span class="green-text">"wezzk.com"</span>)<span class="orange-text">;</span>
+        obj.setLink(<span class="green-text">"https://wezk.github.io/web/"</span>)<span class="orange-text">;</span>
         obj.setAvailable(<span class="orange-text">true</span>)<span class="orange-text">;</span>
         obj.setEmail(<span class="green-text">"wezz@protonmail.com"</span>)<span class="orange-text">;</span>
 
