--- a/apps/index.html
+++ b/apps/index.html
@@ -15,11 +15,11 @@
 <body>
     <nav>
         <div class="nav-wrapper grey darken-3">
-            <a href="../index.html" class="brand-logo left" style="margin-left:20px;"><i class="material-icons circle" style="font-size:50px;">chevron_left</i></a>
+            <a href="../" class="brand-logo left" style="margin-left:20px;"><i class="material-icons circle" style="font-size:50px;">chevron_left</i></a>
             <ul id="nav-mobile" class="right hide-on-med-and-down" style="margin-right:50px;">
-                <li><a href="../index.html#container2">Projects</a></li>
-                <li><a href="../index.html#container3">Skills</a></li>
-                <li><a href="../index.html#container4">About</a></li>
+                <li><a href="../#container2">Projects</a></li>
+                <li><a href="../#container3">Skills</a></li>
+                <li><a href="../#container4">About</a></li>
             </ul>
         </div>
     </nav>
