--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="card z-depth-4" style="padding:20px; padding-top:50px; overflow:auto;">
                 <center>
                     <div class="row" style="max-width:800px">
-                        <a href="apps/index.html?app=audvel" style="color:#000">
+                        <a href="apps/?app=audvel" style="color:#000">
                             <div class="col s4">
                                 <i class="material-icons circle z-depth-2" id="badge">star</i>
                                 <img src="images/icons/audvel.png" id="app-icon" class="app-icon z-depth-2">
@@ -55,14 +55,14 @@
                                 <p id="desc">Podcast app for Android</p>
                             </div>
                         </a>
-                        <a href="apps/index.html?app=tucano" style="color:#000">
+                        <a href="apps/?app=tucano" style="color:#000">
                             <div class="col s4">
                                 <img src="images/icons/tucano.png" id="app-icon" class="app-icon z-depth-2">
                                 <h6>Tucano</h6>
                                 <p id="desc">Twitter client for Android</p>
                             </div>
                         </a>
-                        <a href="apps/index.html?app=myfolder" style="color:#000">
+                        <a href="apps/?app=myfolder" style="color:#000">
                             <div class="col s4 discontinued">
                                 <img src="images/icons/myfolder.png" id="app-icon" class="app-icon z-depth-2">
                                 <h6>My Folder</h6>
@@ -71,21 +71,21 @@
                         </a>
                     </div>
                     <div class="row" style="max-width:800px">
-                        <a href="apps/index.html?app=flare" style="color:#000">
+                        <a href="apps/?app=flare" style="color:#000">
                             <div class="col s4 discontinued">
                                 <img src="images/icons/flare.png" id="app-icon" class="app-icon z-depth-2">
                                 <h6>Flare share</h6>
                                 <p id="desc">File sharing app for iOS, tvOS and Android (discontinued)</p>
                             </div>
                         </a>
-                        <a href="apps/index.html?app=muzzer" style="color:#000">
+                        <a href="apps/?app=muzzer" style="color:#000">
                             <div class="col s4 discontinued">
                                 <img src="images/icons/muzzer.png" id="app-icon" class="app-icon z-depth-2">
                                 <h6>Muzzer</h6>
                                 <p id="desc">Music app for iOS (discontinued)</p>
                             </div>
                         </a>
-                        <a href="apps/index.html?app=outer" style="color:#000">
+                        <a href="apps/?app=outer" style="color:#000">
                             <div class="col s4 discontinued">
                                 <img src="images/icons/outer.jpg" id="app-icon" class="app-icon z-depth-2">
                                 <h6>Outer</h6>
